--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "dotenv": "^16.0.3",
         "metaapi.cloud-sdk": "^22.0.1",
+        "node-cron": "^3.0.2",
         "socket.io-client": "^4.6.1",
         "technicalindicators": "^3.1.0"
     }
